# tournament-director

./: .gitignore  AI_ENVIRONMENT.md  ALEMBIC_GUIDE.md  API_IMPLEMENTATION_PLAN.md  API_SPECIFICATION.md  AUTH_DECISIONS_NEEDED.md  CLAUDE.md  DATABASE_BACKEND_SUMMARY.md  DATABASE_TESTING_SETUP.md  DATABASE_TODO.md  DATA_MODEL.md  DECISIONS.md  FAN-CONTENT-POLICY.md  FASTAPI_STATUS.md  FRAMEWORK_EVALUATION.md  LICENSE  LICENSE-VCL  MYSQL_MARIADB_COMPATIBILITY.md  PR_DATABASE_BACKEND.md  PYTHON_VERSION_POLICY.md  README.md  SESSION_SUMMARY_FASTAPI.md  SWISS_DECISIONS.md  SWISS_PAIRING_STRATEGY.md  VIBE-CODING.md  alembic.ini  audit_data_model.py  pyproject.toml  requirements.txt  test_api_startup.py  test_data_layer.py  test_local_backend.py  test_seed_data.py  tox.ini
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: aa7161e6fd68_initial_schema_players_venues_formats_.py
docs/: SWISS_IMPOSSIBLE_PAIRING.md
examples/: swiss_tiebreaker_example.py
scripts/: check_databases.sh  setup_environment.sh
src/: lifecycle.py  logging_config.py
src/api/: __init__.py  config.py  dependencies.py  main.py
src/api/routers/: __init__.py  formats.py  health.py  matches.py  players.py  registrations.py  rounds.py  tournaments.py  venues.py
src/data/: __init__.py  exceptions.py  interface.py  local.py  mock.py
src/data/database/: __init__.py  connection.py  data_layer.py  models.py  types.py
src/data/database/repositories/: __init__.py  component.py  format.py  match.py  player.py  registration.py  round.py  tournament.py  venue.py
src/models/: auth.py  base.py  format.py  match.py  player.py  tournament.py  venue.py
src/seed/: __init__.py  generators.py
src/swiss/: __init__.py  models.py  pairing.py  standings.py  tiebreakers.py
src/tournament_director.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: token.py
tests/: conftest.py  fixtures.py  test_api_integration.py  test_api_openapi.py  test_auth.py  test_database_backend.py  test_lifecycle.py  test_models.py  test_swiss_pairing.py  test_swiss_standings.py  test_swiss_tiebreaker_scenarios.py  test_swiss_tiebreakers.py
